# geometricon

./: .gitignore  LICENSE  README.md
doc/: appendix.typ  logo.typ  main.bib  main.typ
doc/style/: style.typ
src/: Makefile  dune-project  geometricon.opam
src/analyzer/lib/: analysis.ml  domain.ml  dune  extended_float.ml  interval_domain.ml
src/frontend/lib/: ast.ml  dune  lex_and_parse.ml  lexer.mll  parser.mly
src/interpreter/lib/: dune  lib_interpreter.ml
src/tests/: basic1.geo  basic2.geo  basic3.geo  basic4.geo  basic5.geo  dune  run_tests.ml  widening.geo
